umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_3161_COc1cc(CN2CCC(Nc3nc4_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_opensmiles
category: basic_opensmiles
basic_opensmiles:
  success: true
  summary:
    sum_formula: C20N3O2S
    atom_count: 26
    bond_count: 29
